@@ -2,8 +2,6 @@ package org.jabref.gui.desktop.os;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
 
 public interface NativeDesktop {
     void openFile(String filePath, String fileType) throws IOException;
@@ -11,7 +9,7 @@ public interface NativeDesktop {
     /**
      * Opens a file on an Operating System, using the given application.
      *
-     * @param filePath The filename.
+     * @param filePath    The filename.
      * @param application Link to the app that opens the file.
      * @throws IOException
      */
@@ -20,14 +18,6 @@ public interface NativeDesktop {
     void openFolderAndSelectFile(Path file) throws IOException;
 
     void openConsole(String absolutePath) throws IOException;
-
-    /**
-     * This method opens a pdf using the giving the parameters to the executing pdf reader
-     * @param filePath absolute path to the pdf file to be opened
-     * @param parameters console parameters depending on the pdf reader
-     * @throws IOException
-     */
-    void openPdfWithParameters(String filePath, List<String> parameters) throws  IOException;
 
     String detectProgramPath(String programName, String directoryName);
 
@@ -44,6 +34,6 @@ public interface NativeDesktop {
      * @return the path to the user directory.
      */
     default Path getUserDirectory() {
-        return Paths.get(System.getProperty("user.home"));
+        return Path.of(System.getProperty("user.home"));
     }
 }
