@@ -2,12 +2,11 @@ package org.jabref.gui.util;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import javafx.stage.FileChooser;
 
@@ -22,7 +21,7 @@ public class FileDialogConfiguration {
     private FileChooser.ExtensionFilter selectedExtensionFilter;
 
     private FileDialogConfiguration(Path initialDirectory, List<FileChooser.ExtensionFilter> extensionFilters,
-            FileChooser.ExtensionFilter defaultExtension, String initialFileName) {
+                                    FileChooser.ExtensionFilter defaultExtension, String initialFileName) {
         this.initialDirectory = initialDirectory;
         this.extensionFilters = Objects.requireNonNull(extensionFilters);
         this.defaultExtension = defaultExtension;
@@ -60,30 +59,20 @@ public class FileDialogConfiguration {
         private FileChooser.ExtensionFilter defaultExtension;
         private String initialFileName;
 
-        public Builder addExtensionFilter(FileType fileType) {
-            extensionFilters.add(FileFilterConverter.toExtensionFilter(fileType));
-            return this;
-        }
-
-        public Builder addExtensionFilters(Collection<FileType> fileTypes) {
-            fileTypes.forEach(this::addExtensionFilter);
-            return this;
-        }
-
         public FileDialogConfiguration build() {
             return new FileDialogConfiguration(initialDirectory, extensionFilters, defaultExtension, initialFileName);
         }
 
         public Builder withInitialDirectory(Path directory) {
-            if (directory == null) { //It could be that somehow the path is null, for example if it got deleted in the meantime
+            if (directory == null) { // It could be that somehow the path is null, for example if it got deleted in the meantime
                 initialDirectory = null;
-            } else { //Dir must be a folder, not a file
+            } else { // Dir must be a folder, not a file
                 if (!Files.isDirectory(directory)) {
                     directory = directory.getParent();
                 }
-                //The lines above work also if the dir does not exist at all!
-                //NULL is accepted by the filechooser as no inital path
-                //Explicit null check, if somehow the parent is null, as Files.exists throws an NPE otherwise
+                // The lines above work also if the dir does not exist at all!
+                // NULL is accepted by the filechooser as no inital path
+                // Explicit null check, if somehow the parent is null, as Files.exists throws an NPE otherwise
                 if ((directory != null) && !Files.exists(directory)) {
                     directory = null;
                 }
@@ -94,15 +83,10 @@ public class FileDialogConfiguration {
 
         public Builder withInitialDirectory(String directory) {
             if (directory != null) {
-                withInitialDirectory(Paths.get(directory));
+                withInitialDirectory(Path.of(directory));
             } else {
                 initialDirectory = null;
             }
-            return this;
-        }
-
-        public Builder withDefaultExtension(FileType fileType) {
-            defaultExtension = FileFilterConverter.toExtensionFilter(fileType);
             return this;
         }
 
@@ -111,22 +95,49 @@ public class FileDialogConfiguration {
             return this;
         }
 
-        public Builder withDefaultExtension(String fileTypeDescription) {
-            extensionFilters.stream()
-                    .filter(type -> type.getDescription().equalsIgnoreCase(fileTypeDescription))
-                    .findFirst()
-                    .ifPresent(extensionFilter -> defaultExtension = extensionFilter);
-
-            return this;
-        }
-
-        public Builder addExtensionFilter(FileChooser.ExtensionFilter extensionFilter) {
-            extensionFilters.add(extensionFilter);
-            return this;
-        }
-
         public Builder withDefaultExtension(FileChooser.ExtensionFilter extensionFilter) {
             defaultExtension = extensionFilter;
+            return this;
+        }
+
+        public Builder withDefaultExtension(FileType fileType) {
+            defaultExtension = FileFilterConverter.toExtensionFilter(fileType);
+            return this;
+        }
+
+        public Builder withDefaultExtension(String description, FileType fileType) {
+            defaultExtension = FileFilterConverter.toExtensionFilter(description, fileType);
+            return this;
+        }
+
+        public Builder withDefaultExtension(String fileTypeDescription) {
+            extensionFilters.stream()
+                            .filter(type -> type.getDescription().equalsIgnoreCase(fileTypeDescription))
+                            .findFirst()
+                            .ifPresent(extensionFilter -> defaultExtension = extensionFilter);
+
+            return this;
+        }
+
+        public Builder addExtensionFilter(FileChooser.ExtensionFilter filter) {
+            extensionFilters.add(filter);
+            return this;
+        }
+
+        public Builder addExtensionFilter(List<FileChooser.ExtensionFilter> filters) {
+            extensionFilters.addAll(filters);
+            return this;
+        }
+
+        public Builder addExtensionFilter(FileType... fileTypes) {
+            Stream.of(fileTypes)
+                  .map(FileFilterConverter::toExtensionFilter)
+                  .forEachOrdered(this::addExtensionFilter);
+            return this;
+        }
+
+        public Builder addExtensionFilter(String description, FileType fileType) {
+            extensionFilters.add(FileFilterConverter.toExtensionFilter(description, fileType));
             return this;
         }
     }
