@@ -2,23 +2,18 @@ package org.jabref.logic.citationstyle;
 
 import java.io.IOException;
 import java.io.StringReader;
-import java.io.UncheckedIOException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -26,7 +21,7 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
 
-import org.jabref.logic.util.FileType;
+import org.jabref.logic.util.StandardFileType;
 
 import de.undercouch.citeproc.helper.CSLUtils;
 import org.slf4j.Logger;
@@ -39,15 +34,13 @@ import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
 /**
- * Representation of a CitationStyle.
- * Stores its name, the file path and the style itself
+ * Representation of a CitationStyle. Stores its name, the file path and the style itself
  */
 public class CitationStyle {
 
     public static final String DEFAULT = "/ieee.csl";
     private static final Logger LOGGER = LoggerFactory.getLogger(CitationStyle.class);
-
-    private static final Pattern SNAPSHOT_NAME = Pattern.compile(".*styles-1\\.0\\.1-SNAPSHOT\\.jar");
+    private static final String STYLES_ROOT = "/csl-styles";
 
     private static final List<CitationStyle> STYLES = new ArrayList<>();
 
@@ -88,7 +81,7 @@ public class CitationStyle {
     private static String stripInvalidProlog(String source) {
         int startIndex = source.indexOf("<");
         if (startIndex > 0) {
-            return source.substring(startIndex, source.length());
+            return source.substring(startIndex);
         } else {
             return source;
         }
@@ -99,19 +92,19 @@ public class CitationStyle {
      */
     public static Optional<CitationStyle> createCitationStyleFromFile(final String styleFile) {
         if (!isCitationStyleFile(styleFile)) {
-            LOGGER.error("Can only load style files: " + styleFile);
+            LOGGER.error("Can only load style files: {}", styleFile);
             return Optional.empty();
         }
 
         try {
             String text;
-            String internalFile = (styleFile.startsWith("/") ? "" : "/") + styleFile;
+            String internalFile = STYLES_ROOT + (styleFile.startsWith("/") ? "" : "/") + styleFile;
             URL url = CitationStyle.class.getResource(internalFile);
             if (url != null) {
                 text = CSLUtils.readURLToString(url, StandardCharsets.UTF_8.toString());
             } else {
                 // if the url is null then the style is located outside the classpath
-                text = new String(Files.readAllBytes(Paths.get(styleFile)), StandardCharsets.UTF_8);
+                text = new String(Files.readAllBytes(Path.of(styleFile)), StandardCharsets.UTF_8);
             }
             return createCitationStyleFromSource(text, styleFile);
         } catch (NoSuchFileException e) {
@@ -140,43 +133,39 @@ public class CitationStyle {
         if (!STYLES.isEmpty()) {
             return STYLES;
         }
+
+        URL url = CitationStyle.class.getResource(STYLES_ROOT + "/acm-siggraph.csl");
+        Objects.requireNonNull(url);
+
         try {
+            URI uri = url.toURI();
+            Path path = Path.of(uri).getParent();
 
-            Path filePath = Paths.get(CitationStyle.class.getProtectionDomain().getCodeSource().getLocation().toURI());
-            String path = filePath.toString();
+            STYLES.addAll(discoverCitationStylesInPath(path));
 
-            // This is a quick fix to have the styles when running JabRef in a development environment.
-            // The styles.jar is not extracted into the JabRef.jar and therefore, we search the classpath for it.
-            if (Files.isDirectory(filePath)) {
-                final String cp = System.getProperty("java.class.path");
-                final String[] entries = cp.split(System.getProperty("path.separator"));
-
-                Optional<String> foundStyle = Arrays.stream(entries).filter(entry -> SNAPSHOT_NAME.matcher(entry).matches()).findFirst();
-                path = foundStyle.orElse(path);
-            }
-
-            try (FileSystem jarFs = FileSystems.newFileSystem(Paths.get(path), null)) {
-
-                try (Stream<Path> stylefileStream = Files.find(jarFs.getRootDirectories().iterator().next(), 1, (file, attr) -> file.toString().endsWith("csl"))) {
-                    for (Path style : stylefileStream.collect(Collectors.toList())) {
-                        CitationStyle.createCitationStyleFromFile(style.getFileName().toString()).ifPresent(STYLES::add);
-                    }
-                } catch (UncheckedIOException e) {
-                    throw new IOException(e);
-                }
-            }
             return STYLES;
-        } catch (UncheckedIOException | IOException | URISyntaxException ex) {
-            LOGGER.error("something went wrong while searching available CitationStyles. Are you running directly from source code?", ex);
+        } catch (URISyntaxException | IOException e) {
+            LOGGER.error("something went wrong while searching available CitationStyles", e);
+            return Collections.emptyList();
         }
-        return Collections.emptyList();
+    }
+
+    private static List<CitationStyle> discoverCitationStylesInPath(Path path) throws IOException {
+        try (Stream<Path> stream = Files.find(path, 1, (file, attr) -> file.toString().endsWith("csl"))) {
+            return stream.map(Path::getFileName)
+                         .map(Path::toString)
+                         .map(CitationStyle::createCitationStyleFromFile)
+                         .filter(Optional::isPresent)
+                         .map(Optional::get)
+                         .collect(Collectors.toList());
+        }
     }
 
     /**
      * Checks if the given style file is a CitationStyle
      */
     public static boolean isCitationStyleFile(String styleFile) {
-        return FileType.CITATION_STYLE.getExtensions().stream().anyMatch(styleFile::endsWith);
+        return StandardFileType.CITATION_STYLE.getExtensions().stream().anyMatch(styleFile::endsWith);
     }
 
     public String getTitle() {
