@@ -1,6 +1,6 @@
 package org.jabref.logic.cleanup;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -9,21 +9,19 @@ import java.util.Optional;
 
 import org.jabref.logic.util.io.FileUtil;
 import org.jabref.model.FieldChange;
-import org.jabref.model.cleanup.CleanupJob;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.model.metadata.FileDirectoryPreferences;
+import org.jabref.preferences.FilePreferences;
 
 public class RelativePathsCleanup implements CleanupJob {
 
     private final BibDatabaseContext databaseContext;
-    private final FileDirectoryPreferences fileDirectoryPreferences;
+    private final FilePreferences filePreferences;
 
-
-    public RelativePathsCleanup(BibDatabaseContext databaseContext, FileDirectoryPreferences fileDirectoryPreferences) {
+    public RelativePathsCleanup(BibDatabaseContext databaseContext, FilePreferences filePreferences) {
         this.databaseContext = Objects.requireNonNull(databaseContext);
-        this.fileDirectoryPreferences = Objects.requireNonNull(fileDirectoryPreferences);
+        this.filePreferences = Objects.requireNonNull(filePreferences);
     }
 
     @Override
@@ -34,13 +32,19 @@ public class RelativePathsCleanup implements CleanupJob {
 
         for (LinkedFile fileEntry : fileList) {
             String oldFileName = fileEntry.getLink();
-            String newFileName = FileUtil
-                    .shortenFileName(Paths.get(oldFileName), databaseContext.getFileDirectoriesAsPaths(fileDirectoryPreferences))
-                    .toString();
-
+            String newFileName = null;
+            if (fileEntry.isOnlineLink()) {
+                // keep online link untouched
+                newFileName = oldFileName;
+            } else {
+                // only try to transform local file path to relative one
+                newFileName = FileUtil
+                        .relativize(Path.of(oldFileName), databaseContext.getFileDirectories(filePreferences))
+                        .toString();
+            }
             LinkedFile newFileEntry = fileEntry;
             if (!oldFileName.equals(newFileName)) {
-                newFileEntry = new LinkedFile(fileEntry.getDescription(), newFileName, fileEntry.getFileType());
+                newFileEntry = new LinkedFile(fileEntry.getDescription(), Path.of(newFileName), fileEntry.getFileType());
                 changed = true;
             }
             newFileList.add(newFileEntry);
@@ -57,5 +61,4 @@ public class RelativePathsCleanup implements CleanupJob {
 
         return Collections.emptyList();
     }
-
 }
