@@ -1,56 +1,61 @@
 package org.jabref.logic.auxparser;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+import java.util.List;
 import java.util.Optional;
 
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.importer.fileformat.BibtexParser;
 import org.jabref.model.database.BibDatabase;
+import org.jabref.model.entry.BibEntry;
+import org.jabref.model.util.DummyFileUpdateMonitor;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Answers;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
-public class AuxParserTest {
+class AuxParserTest {
     private ImportFormatPreferences importFormatPreferences;
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
     }
 
-    @After
-    public void tearDown() {
+    @AfterEach
+    void tearDown() {
         importFormatPreferences = null;
     }
 
     @Test
-    public void testNormal() throws URISyntaxException, IOException {
+    void testNormal() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        File auxFile = Paths.get(AuxParserTest.class.getResource("paper.aux").toURI()).toFile();
+        Path auxFile = Path.of(AuxParserTest.class.getResource("paper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
-            ParserResult result = new BibtexParser(importFormatPreferences).parse(originalReader);
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
-            AuxParser auxParser = new AuxParser(auxFile.getAbsolutePath(), result.getDatabase());
-            AuxParserResult auxResult = auxParser.parse();
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
 
             assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
             assertEquals(0, auxResult.getUnresolvedKeysCount());
             BibDatabase newDB = auxResult.getGeneratedBibDatabase();
-            assertEquals(2, newDB.getEntries().size());
+            List<BibEntry> newEntries = newDB.getEntries();
+            assertEquals(2, newEntries.size());
+            assertTrue(newEntries.get(0).hasChanged());
+            assertTrue(newEntries.get(1).hasChanged());
             assertEquals(2, auxResult.getResolvedKeysCount());
             assertEquals(2, auxResult.getFoundKeysInAux());
             assertEquals(auxResult.getFoundKeysInAux() + auxResult.getCrossRefEntriesCount(),
@@ -60,15 +65,14 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testNotAllFound() throws URISyntaxException, IOException {
+    void testNotAllFound() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        File auxFile = Paths.get(AuxParserTest.class.getResource("badpaper.aux").toURI()).toFile();
-
+        Path auxFile = Path.of(AuxParserTest.class.getResource("badpaper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
-            ParserResult result = new BibtexParser(importFormatPreferences).parse(originalReader);
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
-            AuxParser auxParser = new AuxParser(auxFile.getAbsolutePath(), result.getDatabase());
-            AuxParserResult auxResult = auxParser.parse();
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
 
             assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
             assertEquals(1, auxResult.getUnresolvedKeysCount());
@@ -83,14 +87,14 @@ public class AuxParserTest {
     }
 
     @Test
-    public void duplicateBibDatabaseConfiguration() throws URISyntaxException, IOException {
+    void duplicateBibDatabaseConfiguration() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("config.bib");
-        File auxFile = Paths.get(AuxParserTest.class.getResource("paper.aux").toURI()).toFile();
+        Path auxFile = Path.of(AuxParserTest.class.getResource("paper.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
-            ParserResult result = new BibtexParser(importFormatPreferences).parse(originalReader);
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
-            AuxParser auxParser = new AuxParser(auxFile.getAbsolutePath(), result.getDatabase());
-            AuxParserResult auxResult = auxParser.parse();
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
             BibDatabase db = auxResult.getGeneratedBibDatabase();
 
             assertEquals(Optional.of("\"Maintained by \" # maintainer"), db.getPreamble());
@@ -99,14 +103,14 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testNestedAux() throws URISyntaxException, IOException {
+    void testNestedAux() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        File auxFile = Paths.get(AuxParserTest.class.getResource("nested.aux").toURI()).toFile();
+        Path auxFile = Path.of(AuxParserTest.class.getResource("nested.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
-            ParserResult result = new BibtexParser(importFormatPreferences).parse(originalReader);
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
-            AuxParser auxParser = new AuxParser(auxFile.getAbsolutePath(), result.getDatabase());
-            AuxParserResult auxResult = auxParser.parse();
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
 
             assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
             assertEquals(0, auxResult.getUnresolvedKeysCount());
@@ -121,14 +125,14 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testCrossRef() throws URISyntaxException, IOException {
+    void testCrossRef() throws URISyntaxException, IOException {
         InputStream originalStream = AuxParserTest.class.getResourceAsStream("origin.bib");
-        File auxFile = Paths.get(AuxParserTest.class.getResource("crossref.aux").toURI()).toFile();
+        Path auxFile = Path.of(AuxParserTest.class.getResource("crossref.aux").toURI());
         try (InputStreamReader originalReader = new InputStreamReader(originalStream, StandardCharsets.UTF_8)) {
-            ParserResult result = new BibtexParser(importFormatPreferences).parse(originalReader);
+            ParserResult result = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor()).parse(originalReader);
 
-            AuxParser auxParser = new AuxParser(auxFile.getAbsolutePath(), result.getDatabase());
-            AuxParserResult auxResult = auxParser.parse();
+            AuxParser auxParser = new DefaultAuxParser(result.getDatabase());
+            AuxParserResult auxResult = auxParser.parse(auxFile);
 
             assertTrue(auxResult.getGeneratedBibDatabase().hasEntries());
             assertEquals(2, auxResult.getUnresolvedKeysCount());
@@ -143,9 +147,9 @@ public class AuxParserTest {
     }
 
     @Test
-    public void testFileNotFound() {
-        AuxParser auxParser = new AuxParser("unknownfile.bib", new BibDatabase());
-        AuxParserResult auxResult = auxParser.parse();
+    void testFileNotFound() {
+        AuxParser auxParser = new DefaultAuxParser(new BibDatabase());
+        AuxParserResult auxResult = auxParser.parse(Path.of("unknownfile.aux"));
 
         assertFalse(auxResult.getGeneratedBibDatabase().hasEntries());
         assertEquals(0, auxResult.getUnresolvedKeysCount());
