@@ -8,7 +8,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 
@@ -17,10 +16,12 @@ import org.jabref.logic.importer.Importer;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.importer.fileformat.BibtexParser;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.util.DummyFileUpdateMonitor;
 
-import org.junit.Assert;
+import org.junit.jupiter.api.Assertions;
 import org.mockito.Answers;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 
 public class BibEntryAssert {
@@ -29,15 +30,15 @@ public class BibEntryAssert {
      * Reads a single entry from the resource using `getResourceAsStream` from the given class. The resource has to
      * contain a single entry
      *
-     * @param clazz the class where to call `getResourceAsStream`
+     * @param clazz        the class where to call `getResourceAsStream`
      * @param resourceName the resource to read
-     * @param entry the entry to compare with
+     * @param entry        the entry to compare with
      */
     public static void assertEquals(Class<?> clazz, String resourceName, BibEntry entry)
             throws IOException {
-        Assert.assertNotNull(clazz);
-        Assert.assertNotNull(resourceName);
-        Assert.assertNotNull(entry);
+        assertNotNull(clazz);
+        assertNotNull(resourceName);
+        assertNotNull(entry);
         try (InputStream shouldBeIs = clazz.getResourceAsStream(resourceName)) {
             BibEntryAssert.assertEquals(shouldBeIs, entry);
         }
@@ -47,15 +48,15 @@ public class BibEntryAssert {
      * Reads a single entry from the resource using `getResourceAsStream` from the given class. The resource has to
      * contain a single entry
      *
-     * @param clazz the class where to call `getResourceAsStream`
+     * @param clazz        the class where to call `getResourceAsStream`
      * @param resourceName the resource to read
-     * @param asIsEntries a list containing a single entry to compare with
+     * @param asIsEntries  a list containing a single entry to compare with
      */
     public static void assertEquals(Class<?> clazz, String resourceName, List<BibEntry> asIsEntries)
             throws IOException {
-        Assert.assertNotNull(clazz);
-        Assert.assertNotNull(resourceName);
-        Assert.assertNotNull(asIsEntries);
+        assertNotNull(clazz);
+        assertNotNull(resourceName);
+        assertNotNull(asIsEntries);
         try (InputStream shouldBeIs = clazz.getResourceAsStream(resourceName)) {
             BibEntryAssert.assertEquals(shouldBeIs, asIsEntries);
         }
@@ -64,11 +65,12 @@ public class BibEntryAssert {
     private static List<BibEntry> getListFromInputStream(InputStream is) throws IOException {
         ParserResult result;
         try (Reader reader = new InputStreamReader(is, StandardCharsets.UTF_8)) {
-            BibtexParser parser = new BibtexParser(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS));
+            BibtexParser parser = new BibtexParser(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS), new DummyFileUpdateMonitor());
             result = parser.parse(reader);
         }
-        Assert.assertNotNull(result);
-        Assert.assertFalse(result.isEmpty());
+        assertNotNull(result);
+        assertNotNull(result.getDatabase());
+        assertNotNull(result.getDatabase().getEntries());
         return result.getDatabase().getEntries();
     }
 
@@ -76,20 +78,22 @@ public class BibEntryAssert {
      * Reads a bibtex database from the given InputStream. The list is compared with the given list.
      *
      * @param expectedInputStream the inputStream reading the entry from
-     * @param actualEntries a list containing a single entry to compare with
+     * @param actualEntries       a list containing a single entry to compare with
      */
     public static void assertEquals(InputStream expectedInputStream, List<BibEntry> actualEntries)
             throws IOException {
-        Assert.assertNotNull(expectedInputStream);
-        Assert.assertNotNull(actualEntries);
-        Assert.assertEquals(getListFromInputStream(expectedInputStream), actualEntries);
+        assertNotNull(expectedInputStream);
+        assertNotNull(actualEntries);
+        // explicit reference of Assertions is needed here to disambiguate from the methods defined by this class
+        Assertions.assertEquals(getListFromInputStream(expectedInputStream), actualEntries);
     }
 
     public static void assertEquals(List<BibEntry> expectedEntries, InputStream actualInputStream)
             throws IOException {
-        Assert.assertNotNull(actualInputStream);
-        Assert.assertNotNull(expectedEntries);
-        Assert.assertEquals(expectedEntries, getListFromInputStream(actualInputStream));
+        assertNotNull(actualInputStream);
+        assertNotNull(expectedEntries);
+        // explicit reference of Assertions is needed here to disambiguate from the methods defined by this class
+        Assertions.assertEquals(expectedEntries, getListFromInputStream(actualInputStream));
     }
 
     /**
@@ -97,7 +101,7 @@ public class BibEntryAssert {
      * compared to the given entry
      *
      * @param expected the inputStream reading the entry from
-     * @param actual the entry to compare with
+     * @param actual   the entry to compare with
      */
     public static void assertEquals(InputStream expected, BibEntry actual)
             throws IOException {
@@ -105,11 +109,13 @@ public class BibEntryAssert {
     }
 
     /**
-     * Compares two InputStreams. For each InputStream a list will be created. expectedIs is read directly, actualIs is filtered through importer to convert to a list of BibEntries.
-     * @param expectedIs A BibtexImporter InputStream.
+     * Compares two InputStreams. For each InputStream a list will be created. expectedIs is read directly, actualIs is
+     * filtered through importer to convert to a list of BibEntries.
+     *
+     * @param expectedIs   A BibtexImporter InputStream.
      * @param fileToImport The path to the file to be imported.
-     * @param importer The fileformat you want to use to read the passed file to get the list of expected BibEntries
-     * @throws IOException
+     * @param importer     The fileformat you want to use to read the passed file to get the list of expected
+     *                     BibEntries
      */
     public static void assertEquals(InputStream expectedIs, Path fileToImport, Importer importer)
             throws IOException {
@@ -118,25 +124,28 @@ public class BibEntryAssert {
 
     public static void assertEquals(InputStream expectedIs, URL fileToImport, Importer importer)
             throws URISyntaxException, IOException {
-        assertEquals(expectedIs, Paths.get(fileToImport.toURI()), importer);
+        assertEquals(expectedIs, Path.of(fileToImport.toURI()), importer);
     }
 
     /**
-     * Compares a list of BibEntries to an InputStream. actualIs is filtered through importerForActualIs to convert to a list of BibEntries.
-     * @param expected A BibtexImporter InputStream.
+     * Compares a list of BibEntries to an InputStream. actualIs is filtered through importerForActualIs to convert to a
+     * list of BibEntries.
+     *
+     * @param expected     A BibtexImporter InputStream.
      * @param fileToImport The path to the file to be imported.
-     * @param importer The fileformat you want to use to read the passed file to get the list of expected BibEntries
-     * @throws IOException
+     * @param importer     The fileformat you want to use to read the passed file to get the list of expected
+     *                     BibEntries
      */
     public static void assertEquals(List<BibEntry> expected, Path fileToImport, Importer importer)
             throws IOException {
         List<BibEntry> actualEntries = importer.importDatabase(fileToImport, StandardCharsets.UTF_8)
-                .getDatabase().getEntries();
-        Assert.assertEquals(expected, actualEntries);
+                                               .getDatabase().getEntries();
+        // explicit reference of Assertions is needed here to disambiguate from the methods defined by this class
+        Assertions.assertEquals(expected, actualEntries);
     }
 
     public static void assertEquals(List<BibEntry> expected, URL fileToImport, Importer importer)
             throws URISyntaxException, IOException {
-        assertEquals(expected, Paths.get(fileToImport.toURI()), importer);
+        assertEquals(expected, Path.of(fileToImport.toURI()), importer);
     }
 }
