@@ -1,12 +1,9 @@
 package org.jabref.logic.exporter;
 
-import java.io.File;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -17,103 +14,92 @@ import org.jabref.logic.importer.fileformat.BibtexImporter;
 import org.jabref.logic.importer.fileformat.ModsImporter;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.util.DummyFileUpdateMonitor;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameter;
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Answers;
-import org.xmlunit.builder.Input;
-import org.xmlunit.builder.Input.Builder;
-import org.xmlunit.diff.DefaultNodeMatcher;
-import org.xmlunit.diff.ElementSelectors;
-import org.xmlunit.matchers.CompareMatcher;
+import org.mockito.Mockito;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 
-@RunWith(Parameterized.class)
 public class ModsExportFormatTestFiles {
 
+    private static Path resourceDir;
     public Charset charset;
     private BibDatabaseContext databaseContext;
-    private File tempFile;
-    private ModsExporter modsExportFormat;
+    private Path exportedFile;
+    private ModsExporter exporter;
     private BibtexImporter bibtexImporter;
     private ModsImporter modsImporter;
     private Path importFile;
 
+    public static Stream<String> fileNames() throws Exception {
+        resourceDir = Path.of(MSBibExportFormatTestFiles.class.getResource("ModsExportFormatTestAllFields.bib").toURI()).getParent();
+        System.out.println(resourceDir);
 
-    @Parameter
-    public String filename;
-
-    @Rule
-    public TemporaryFolder testFolder = new TemporaryFolder();
-
-
-    @Parameters(name = "{0}")
-    public static Collection<String> fileNames() throws Exception {
-        try (Stream<Path> stream = Files.list(Paths.get(ModsExportFormatTestFiles.class.getResource("").toURI()))) {
+        try (Stream<Path> stream = Files.list(resourceDir)) {
             //            stream.forEach(n -> System.out.println(n));
             return stream.map(n -> n.getFileName().toString()).filter(n -> n.endsWith(".bib"))
-                    .filter(n -> n.startsWith("Mods")).collect(Collectors.toList());
+                         .filter(n -> n.startsWith("Mods")).collect(Collectors.toList()).stream();
         }
     }
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    public void setUp(@TempDir Path testFolder) throws Exception {
         databaseContext = new BibDatabaseContext();
-        importFile = Paths.get(ModsExportFormatTestFiles.class.getResource(filename).toURI());
         charset = StandardCharsets.UTF_8;
-        modsExportFormat = new ModsExporter();
-        tempFile = testFolder.newFile();
-        bibtexImporter = new BibtexImporter(mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS));
-        modsImporter = new ModsImporter();
+        exporter = new ModsExporter();
+        Path path = testFolder.resolve("ARandomlyNamedFile.tmp");
+        Files.createFile(path);
+        exportedFile = path.toAbsolutePath();
+        ImportFormatPreferences mock = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
+        bibtexImporter = new BibtexImporter(mock, new DummyFileUpdateMonitor());
+        Mockito.when(mock.getKeywordSeparator()).thenReturn(',');
+        modsImporter = new ModsImporter(mock);
     }
 
-    @Test
-    public final void testPerformExport() throws Exception {
+    @ParameterizedTest
+    @MethodSource("fileNames")
+    public final void testPerformExport(String filename) throws Exception {
+        importFile = Path.of(ModsExportFormatTestFiles.class.getResource(filename).toURI());
         String xmlFileName = filename.replace(".bib", ".xml");
-        String tempFilename = tempFile.getCanonicalPath();
         List<BibEntry> entries = bibtexImporter.importDatabase(importFile, charset).getDatabase().getEntries();
-        Path xmlFile = Paths.get(ModsExportFormatTestFiles.class.getResource(xmlFileName).toURI());
+        Path expectedFile = Path.of(ModsExportFormatTestFiles.class.getResource(xmlFileName).toURI());
 
-        modsExportFormat.export(databaseContext, tempFile.toPath(), charset, entries);
+        exporter.export(databaseContext, exportedFile, charset, entries);
 
-        Builder control = Input.from(Files.newInputStream(xmlFile));
-        Builder test = Input.from(Files.newInputStream(Paths.get(tempFilename)));
-
-        Assert.assertThat(test, CompareMatcher.isSimilarTo(control)
-                .withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)).throwComparisonFailure());
+        assertEquals(
+                String.join("\n", Files.readAllLines(expectedFile)),
+                String.join("\n", Files.readAllLines(exportedFile)));
     }
 
-    @Test
-    public final void testExportAsModsAndThenImportAsMods() throws Exception {
+    @ParameterizedTest
+    @MethodSource("fileNames")
+    public final void testExportAsModsAndThenImportAsMods(String filename) throws Exception {
+        importFile = Path.of(ModsExportFormatTestFiles.class.getResource(filename).toURI());
         List<BibEntry> entries = bibtexImporter.importDatabase(importFile, charset).getDatabase().getEntries();
 
-        modsExportFormat.export(databaseContext, tempFile.toPath(), charset, entries);
-        BibEntryAssert.assertEquals(entries, Paths.get(tempFile.getPath()), modsImporter);
+        exporter.export(databaseContext, exportedFile, charset, entries);
+        BibEntryAssert.assertEquals(entries, exportedFile, modsImporter);
     }
 
-    @Test
-    public final void testImportAsModsAndExportAsMods() throws Exception {
+    @ParameterizedTest
+    @MethodSource("fileNames")
+    public final void testImportAsModsAndExportAsMods(String filename) throws Exception {
+        importFile = Path.of(ModsExportFormatTestFiles.class.getResource(filename).toURI());
         String xmlFileName = filename.replace(".bib", ".xml");
-        String tempFilename = tempFile.getCanonicalPath();
-        Path xmlFile = Paths.get(ModsExportFormatTestFiles.class.getResource(xmlFileName).toURI());
+        Path xmlFile = Path.of(ModsExportFormatTestFiles.class.getResource(xmlFileName).toURI());
 
         List<BibEntry> entries = modsImporter.importDatabase(xmlFile, charset).getDatabase().getEntries();
 
-        modsExportFormat.export(databaseContext, tempFile.toPath(), charset, entries);
+        exporter.export(databaseContext, exportedFile, charset, entries);
 
-        Builder control = Input.from(Files.newInputStream(xmlFile));
-        Builder test = Input.from(Files.newInputStream(Paths.get(tempFilename)));
-
-        Assert.assertThat(test, CompareMatcher.isSimilarTo(control)
-                .withNodeMatcher(new DefaultNodeMatcher(ElementSelectors.byNameAndText)).throwComparisonFailure());
+        assertEquals(
+                String.join("\n", Files.readAllLines(xmlFile)),
+                String.join("\n", Files.readAllLines(exportedFile)));
     }
-
 }
