@@ -1,51 +1,38 @@
 package org.jabref.logic.importer;
 
-import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-/**
- * @author Nosh&Dan
- * @version 09.11.2008 | 19:41:40
- */
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
 public class ImportDataTest {
 
-    public static final File FILE_IN_DATABASE = Paths
-            .get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfInDatabase.pdf").toFile();
-    public static final File FILE_NOT_IN_DATABASE = Paths
-            .get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfNotInDatabase.pdf")
-            .toFile();
-    public static final File EXISTING_FOLDER = Paths
-            .get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder").toFile();
-    public static final File NOT_EXISTING_FOLDER = Paths.get("notexistingfolder").toFile();
-    public static final File NOT_EXISTING_PDF = Paths
-            .get("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/null.pdf").toFile();
-    public static final File UNLINKED_FILES_TEST_BIB = Paths
-            .get("src/test/resources/org/jabref/util/unlinkedFilesTestBib.bib").toFile();
-
+    public static final Path FILE_IN_DATABASE = Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfInDatabase.pdf");
+    public static final Path FILE_NOT_IN_DATABASE = Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/pdfNotInDatabase.pdf");
+    public static final Path EXISTING_FOLDER = Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder");
+    public static final Path NOT_EXISTING_FOLDER = Path.of("notexistingfolder");
+    public static final Path NOT_EXISTING_PDF = Path.of("src/test/resources/org/jabref/logic/importer/unlinkedFilesTestFolder/null.pdf");
+    public static final Path UNLINKED_FILES_TEST_BIB = Path.of("src/test/resources/org/jabref/util/unlinkedFilesTestBib.bib");
 
     /**
      * Tests the testing environment.
      */
     @Test
-    public void testTestingEnvironment() {
+    void testTestingEnvironment() {
 
-        Assert.assertTrue(ImportDataTest.EXISTING_FOLDER.exists());
-        Assert.assertTrue(ImportDataTest.EXISTING_FOLDER.isDirectory());
+        assertTrue(Files.exists(ImportDataTest.EXISTING_FOLDER), "EXISTING_FOLDER does not exist");
+        assertTrue(Files.isDirectory(ImportDataTest.EXISTING_FOLDER), "EXISTING_FOLDER is not a directory");
 
-        Assert.assertTrue(ImportDataTest.FILE_IN_DATABASE.exists());
-        Assert.assertTrue(ImportDataTest.FILE_IN_DATABASE.isFile());
+        assertTrue(Files.exists(ImportDataTest.FILE_IN_DATABASE), "FILE_IN_DATABASE does not exist");
+        assertTrue(Files.isRegularFile(ImportDataTest.FILE_IN_DATABASE), "FILE_IN_DATABASE is not a regular file");
 
-        Assert.assertTrue(ImportDataTest.FILE_NOT_IN_DATABASE.exists());
-        Assert.assertTrue(ImportDataTest.FILE_NOT_IN_DATABASE.isFile());
+        assertTrue(Files.exists(ImportDataTest.FILE_NOT_IN_DATABASE), "FILE_NOT_IN_DATABASE does not exist");
+        assertTrue(Files.isRegularFile(ImportDataTest.FILE_NOT_IN_DATABASE), "FILE_NOT_IN_DATABASE is not a regular file");
+
+        assertFalse(Files.exists(ImportDataTest.NOT_EXISTING_FOLDER), "NOT_EXISTING_FOLDER exists");
+        assertFalse(Files.exists(ImportDataTest.NOT_EXISTING_PDF), "NOT_EXISTING_PDF exists");
     }
-
-    @Test
-    public void testOpenNotExistingDirectory() {
-        Assert.assertFalse(ImportDataTest.NOT_EXISTING_FOLDER.exists());
-        Assert.assertFalse(ImportDataTest.NOT_EXISTING_PDF.exists());
-    }
-
 }
