@@ -2,50 +2,52 @@ package org.jabref.logic.importer;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import org.jabref.logic.xmp.XMPPreferences;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.jabref.logic.preferences.TimestampPreferences;
+import org.jabref.logic.xmp.XmpPreferences;
+import org.jabref.model.util.DummyFileUpdateMonitor;
+import org.jabref.model.util.FileUpdateMonitor;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Answers;
-import static org.junit.Assert.fail;
+
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-public class ImportFormatReaderTestParameterless {
+class ImportFormatReaderTestParameterless {
 
     private ImportFormatReader reader;
+    private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
+    private final TimestampPreferences timestampPreferences = mock(TimestampPreferences.class);
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         reader = new ImportFormatReader();
         ImportFormatPreferences importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
         when(importFormatPreferences.getEncoding()).thenReturn(StandardCharsets.UTF_8);
-        reader.resetImportFormats(importFormatPreferences, mock(XMPPreferences.class));
+        reader.resetImportFormats(importFormatPreferences, mock(XmpPreferences.class), fileMonitor);
     }
 
-    @Test(expected = ImportException.class)
-    public void importUnknownFormatThrowsExceptionIfNoMatchingImporterWasFound() throws Exception {
-        Path file = Paths.get(ImportFormatReaderTestParameterless.class.getResource("fileformat/emptyFile.xml").toURI());
-        reader.importUnknownFormat(file);
-        fail();
+    @Test
+    void importUnknownFormatThrowsExceptionIfNoMatchingImporterWasFound() throws Exception {
+        Path file = Path.of(ImportFormatReaderTestParameterless.class.getResource("fileformat/emptyFile.xml").toURI());
+        assertThrows(ImportException.class, () -> reader.importUnknownFormat(file, timestampPreferences, fileMonitor));
     }
 
-    @Test(expected = NullPointerException.class)
-    public void testNullImportUnknownFormatPath() throws Exception {
-        reader.importUnknownFormat((Path) null);
-        fail();
+    @Test
+    void importUnknownFormatThrowsExceptionIfPathIsNull() throws Exception {
+        assertThrows(NullPointerException.class, () -> reader.importUnknownFormat(null, timestampPreferences, fileMonitor));
     }
 
-    @Test(expected = NullPointerException.class)
-    public void testNullImportUnknownFormatString() throws Exception {
-        reader.importUnknownFormat((String) null);
-        fail();
+    @Test
+    void importUnknownFormatThrowsExceptionIfDataIsNull() throws Exception {
+        assertThrows(NullPointerException.class, () -> reader.importUnknownFormat(null));
     }
 
-    @Test(expected = ImportException.class)
-    public void importFromFileWithUnknownFormatThrowsException() throws Exception {
-        reader.importFromFile("someunknownformat", Paths.get("somepath"));
-        fail();
+    @Test
+    void importFromFileWithUnknownFormatThrowsException() throws Exception {
+        assertThrows(ImportException.class, () -> reader.importFromFile("someunknownformat", Path.of("somepath")));
     }
-
 }
