@@ -1,21 +1,21 @@
 package org.jabref.logic.importer.fileformat;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Arrays;
 
 import org.jabref.logic.importer.Importer;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class CustomImporterTest {
 
     private CustomImporter importer;
 
-    @Before
+    @BeforeEach
     public void setUp() throws Exception {
         importer = asCustomImporter(new CopacImporter());
     }
@@ -37,7 +37,7 @@ public class CustomImporterTest {
 
     @Test
     public void testGetBasePath() {
-        assertEquals(Paths.get("src/main/java/org/jabref/logic/importer/fileformat/CopacImporter.java"),
+        assertEquals(Path.of("src/main/java/org/jabref/logic/importer/fileformat/CopacImporter.java"),
                 importer.getBasePath());
     }
 
@@ -54,7 +54,7 @@ public class CustomImporterTest {
 
     @Test
     public void equalsIsBasedOnName() {
-        //noinspection AssertEqualsBetweenInconvertibleTypes
+        // noinspection AssertEqualsBetweenInconvertibleTypes
         assertEquals(new CopacImporter(), importer);
     }
 
@@ -88,6 +88,7 @@ public class CustomImporterTest {
         CustomImporter customImporter = new CustomImporter(
                 "src/main/java/org/jabref/logic/importer/fileformat/CopacImporter.java",
                 "org.jabref.logic.importer.fileformat.CopacImporter");
+
         assertEquals(importer, customImporter);
     }
 
