@@ -4,33 +4,42 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
 
-import org.jabref.logic.util.FileType;
+import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.Month;
+import org.jabref.model.entry.field.Field;
+import org.jabref.model.entry.field.StandardField;
+import org.jabref.model.entry.field.UnknownField;
+import org.jabref.model.entry.types.StandardEntryType;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-/**
- * Test cases for the IsiImporter
- */
 public class IsiImporterTest {
 
+    private static final String FILE_ENDING = ".isi";
     private final IsiImporter importer = new IsiImporter();
 
-    @Rule
-    public ExpectedException thrown = ExpectedException.none();
+    private static Stream<String> fileNames() throws IOException {
+        Predicate<String> fileName = name -> name.startsWith("IsiImporterTest")
+                && !name.contains("Empty")
+                && name.endsWith(FILE_ENDING);
+        return ImporterTestEngine.getTestFiles(fileName).stream();
+    }
 
+    private static Stream<String> invalidFileNames() throws IOException {
+        Predicate<String> fileName = name -> !name.startsWith("IsiImporterTest");
+        return ImporterTestEngine.getTestFiles(fileName).stream();
+    }
 
     @Test
     public void testParseMonthException() {
@@ -49,7 +58,7 @@ public class IsiImporterTest {
 
     @Test
     public void testsGetExtensions() {
-        assertEquals(FileType.ISI, importer.getFileType());
+        assertEquals(StandardFileType.ISI, importer.getFileType());
     }
 
     @Test
@@ -58,163 +67,154 @@ public class IsiImporterTest {
                 importer.getDescription());
     }
 
-    @Test
-    public void testIsRecognizedFormatAccepted() throws IOException, URISyntaxException {
-        List<String> list = Arrays.asList("IsiImporterTest1.isi", "IsiImporterTest2.isi", "IsiImporterTestInspec.isi",
-                "IsiImporterTestWOS.isi", "IsiImporterTestMedline.isi");
-
-        for (String str : list) {
-            Path file = Paths.get(IsiImporterTest.class.getResource(str).toURI());
-            assertTrue(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
-        }
+    @ParameterizedTest
+    @MethodSource("fileNames")
+    public void testIsRecognizedFormatAccepted(String fileName) throws IOException {
+        ImporterTestEngine.testIsRecognizedFormat(importer, fileName);
     }
 
-    @Test
-    public void testIsRecognizedFormatRejected() throws IOException, URISyntaxException {
-        List<String> list = Arrays.asList("IsiImporterTestEmpty.isi");
-
-        for (String str : list) {
-            Path file = Paths.get(IsiImporterTest.class.getResource(str).toURI());
-            assertFalse(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
-        }
+    @ParameterizedTest
+    @MethodSource("invalidFileNames")
+    public void testIsRecognizedFormatRejected(String fileName) throws IOException {
+        ImporterTestEngine.testIsNotRecognizedFormat(importer, fileName);
     }
 
     @Test
     public void testProcessSubSup() {
+        HashMap<Field, String> subs = new HashMap<>();
 
-        HashMap<String, String> hm = new HashMap<>();
-        hm.put("title", "/sub 3/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_3$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sub 3/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_3$", subs.get(StandardField.TITLE));
 
-        hm.put("title", "/sub   3   /");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_3$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sub   3   /");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_3$", subs.get(StandardField.TITLE));
 
-        hm.put("title", "/sub 31/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_{31}$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sub 31/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_{31}$", subs.get(StandardField.TITLE));
 
-        hm.put("abstract", "/sub 3/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_3$", hm.get("abstract"));
+        subs.put(StandardField.ABSTRACT, "/sub 3/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_3$", subs.get(StandardField.ABSTRACT));
 
-        hm.put("review", "/sub 31/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_{31}$", hm.get("review"));
+        subs.put(StandardField.REVIEW, "/sub 31/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_{31}$", subs.get(StandardField.REVIEW));
 
-        hm.put("title", "/sup 3/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$^3$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sup 3/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$^3$", subs.get(StandardField.TITLE));
 
-        hm.put("title", "/sup 31/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$^{31}$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sup 31/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$^{31}$", subs.get(StandardField.TITLE));
 
-        hm.put("abstract", "/sup 3/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$^3$", hm.get("abstract"));
+        subs.put(StandardField.ABSTRACT, "/sup 3/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$^3$", subs.get(StandardField.ABSTRACT));
 
-        hm.put("review", "/sup 31/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$^{31}$", hm.get("review"));
+        subs.put(StandardField.REVIEW, "/sup 31/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$^{31}$", subs.get(StandardField.REVIEW));
 
-        hm.put("title", "/sub $Hello/");
-        IsiImporter.processSubSup(hm);
-        assertEquals("$_{\\$Hello}$", hm.get("title"));
+        subs.put(StandardField.TITLE, "/sub $Hello/");
+        IsiImporter.processSubSup(subs);
+        assertEquals("$_{\\$Hello}$", subs.get(StandardField.TITLE));
     }
 
     @Test
     public void testImportEntries1() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTest1.isi").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTest1.isi").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
-        assertEquals(1, entries.size());
         BibEntry entry = entries.get(0);
+
+        assertEquals(1, entries.size());
         assertEquals(Optional.of("Optical properties of MgO doped LiNbO$_3$ single crystals"),
-                entry.getField("title"));
+                entry.getField(StandardField.TITLE));
         assertEquals(
                 Optional.of(
                         "James Brown and James Marc Brown and Brown, J. M. and Brown, J. and Brown, J. M. and Brown, J."),
-                entry.getField("author"));
-
-        assertEquals("article", entry.getType());
-        assertEquals(Optional.of("Optical Materials"), entry.getField("journal"));
-        assertEquals(Optional.of("2006"), entry.getField("year"));
-        assertEquals(Optional.of("28"), entry.getField("volume"));
-        assertEquals(Optional.of("5"), entry.getField("number"));
-        assertEquals(Optional.of("467--72"), entry.getField("pages"));
+                entry.getField(StandardField.AUTHOR));
+        assertEquals(StandardEntryType.Article, entry.getType());
+        assertEquals(Optional.of("Optical Materials"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("2006"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("5"), entry.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("467--72"), entry.getField(StandardField.PAGES));
     }
 
     @Test
     public void testImportEntries2() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTest2.isi").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTest2.isi").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
-        assertEquals(3, entries.size());
         BibEntry entry = entries.get(0);
-        assertEquals(Optional.of("Optical properties of MgO doped LiNbO$_3$ single crystals"),
-                entry.getField("title"));
 
-        assertEquals("misc", entry.getType());
-        assertEquals(Optional.of("Optical Materials"), entry.getField("journal"));
-        assertEquals(Optional.of("2006"), entry.getField("year"));
-        assertEquals(Optional.of("28"), entry.getField("volume"));
-        assertEquals(Optional.of("5"), entry.getField("number"));
-        assertEquals(Optional.of("467-72"), entry.getField("pages"));
+        assertEquals(3, entries.size());
+        assertEquals(Optional.of("Optical properties of MgO doped LiNbO$_3$ single crystals"),
+                entry.getField(StandardField.TITLE));
+        assertEquals(StandardEntryType.Misc, entry.getType());
+        assertEquals(Optional.of("Optical Materials"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("2006"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("5"), entry.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("467-72"), entry.getField(StandardField.PAGES));
     }
 
     @Test
     public void testImportEntriesINSPEC() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTestInspec.isi").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTestInspec.isi").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
-        assertEquals(2, entries.size());
-        BibEntry a = entries.get(0);
-        BibEntry b = entries.get(1);
+        BibEntry first = entries.get(0);
+        BibEntry second = entries.get(1);
 
-        if (a.getField("title").equals(
+        if (first.getField(StandardField.TITLE).equals(
                 Optional.of("Optical and photoelectric spectroscopy of photorefractive Sn$_2$P$_2$S$_6$ crystals"))) {
-            BibEntry tmp = a;
-            a = b;
-            b = tmp;
+            BibEntry tmp = first;
+            first = second;
+            second = tmp;
         }
 
+        assertEquals(2, entries.size());
         assertEquals(
                 Optional.of(
                         "Second harmonic generation of continuous wave ultraviolet light and production of beta -BaB$_2$O$_4$ optical waveguides"),
-                a.getField("title"));
-        assertEquals("article", a.getType());
+                first.getField(StandardField.TITLE));
+        assertEquals(StandardEntryType.Article, first.getType());
 
         assertEquals(Optional.of("Degl'Innocenti, R. and Guarino, A. and Poberaj, G. and Gunter, P."),
-                a.getField("author"));
-        assertEquals(Optional.of("Applied Physics Letters"), a.getField("journal"));
-        assertEquals(Optional.of("2006"), a.getField("year"));
-        assertEquals(Optional.of("#jul#"), a.getField("month"));
-        assertEquals(Optional.of("89"), a.getField("volume"));
-        assertEquals(Optional.of("4"), a.getField("number"));
-        assertEquals(Optional.of("Lorem ipsum abstract"), a.getField("abstract"));
-        assertEquals(Optional.of("Aip"), a.getField("publisher"));
-
+                first.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Applied Physics Letters"), first.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("2006"), first.getField(StandardField.YEAR));
+        assertEquals(Optional.of(Month.JULY), first.getMonth());
+        assertEquals(Optional.of("89"), first.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("4"), first.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("Lorem ipsum abstract"), first.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("Aip"), first.getField(StandardField.PUBLISHER));
         assertEquals(
                 Optional.of("Optical and photoelectric spectroscopy of photorefractive Sn$_2$P$_2$S$_6$ crystals"),
-                b.getField("title"));
-        assertEquals("article", b.getType());
+                second.getField(StandardField.TITLE));
+        assertEquals(StandardEntryType.Article, second.getType());
     }
 
     @Test
     public void testImportEntriesWOS() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTestWOS.isi").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTestWOS.isi").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
+        BibEntry first = entries.get(0);
+        BibEntry second = entries.get(1);
+
         assertEquals(2, entries.size());
-        BibEntry a = entries.get(0);
-        BibEntry b = entries.get(1);
 
         assertEquals(Optional.of("Optical and photoelectric spectroscopy of photorefractive Sn2P2S6 crystals"),
-                a.getField("title"));
+                first.getField(StandardField.TITLE));
         assertEquals(Optional.of("Optical waveguides in Sn2P2S6 by low fluence MeV He+ ion implantation"),
-                b.getField("title"));
+                second.getField(StandardField.TITLE));
 
-        assertEquals(Optional.of("Journal of Physics-condensed Matter"), a.getField("journal"));
+        assertEquals(Optional.of("Journal of Physics-condensed Matter"), first.getField(StandardField.JOURNAL));
     }
 
     @Test
@@ -228,12 +228,10 @@ public class IsiImporterTest {
                 "Joffe, Hadine and Hall, Janet E. and Gruber, Staci and Sarmiento, Ingrid A. and Cohen, Lee S. and Yurgelun-Todd, Deborah and Martin, Kathryn A.",
                 IsiImporter.isiAuthorsConvert(
                         "Joffe, Hadine; Hall, Janet E; Gruber, Staci; Sarmiento, Ingrid A; Cohen, Lee S; Yurgelun-Todd, Deborah; Martin, Kathryn A"));
-
     }
 
     @Test
     public void testMonthConvert() {
-
         assertEquals("#jun#", IsiImporter.parseMonth("06"));
         assertEquals("#jun#", IsiImporter.parseMonth("JUN"));
         assertEquals("#jun#", IsiImporter.parseMonth("jUn"));
@@ -259,94 +257,90 @@ public class IsiImporterTest {
 
     @Test
     public void testImportIEEEExport() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IEEEImport1.txt").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IEEEImport1.txt").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
+        BibEntry entry = entries.get(0);
 
         assertEquals(1, entries.size());
-        BibEntry a = entries.get(0);
-        assertEquals("article", a.getType());
-        assertEquals(Optional.of("Geoscience and Remote Sensing Letters, IEEE"), a.getField("journal"));
+        assertEquals(StandardEntryType.Article, entry.getType());
+        assertEquals(Optional.of("Geoscience and Remote Sensing Letters, IEEE"), entry.getField(StandardField.JOURNAL));
         assertEquals(Optional.of("Improving Urban Road Extraction in High-Resolution "
-                + "Images Exploiting Directional Filtering, Perceptual " + "Grouping, and Simple Topological Concepts"),
-                a.getField("title"));
-        assertEquals(Optional.of("4"), a.getField("volume"));
-        assertEquals(Optional.of("3"), a.getField("number"));
-        assertEquals(Optional.of("1545-598X"), a.getField("SN"));
-        assertEquals(Optional.of("387--391"), a.getField("pages"));
-        assertEquals(Optional.of("Gamba, P. and Dell'Acqua, F. and Lisini, G."), a.getField("author"));
-        assertEquals(Optional.of("2006"), a.getField("year"));
+                        + "Images Exploiting Directional Filtering, Perceptual " + "Grouping, and Simple Topological Concepts"),
+                entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("4"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("3"), entry.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("1545-598X"), entry.getField(new UnknownField("SN")));
+        assertEquals(Optional.of("387--391"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Gamba, P. and Dell'Acqua, F. and Lisini, G."), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("2006"), entry.getField(StandardField.YEAR));
         assertEquals(Optional.of("Perceptual grouping, street extraction, urban remote sensing"),
-                a.getField("keywords"));
-        assertEquals(Optional.of("Lorem ipsum abstract"), a.getField("abstract"));
+                entry.getField(StandardField.KEYWORDS));
+        assertEquals(Optional.of("Lorem ipsum abstract"), entry.getField(StandardField.ABSTRACT));
     }
 
     @Test
     public void testIEEEImport() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IEEEImport1.txt").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IEEEImport1.txt").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
+        BibEntry entry = entries.get(0);
 
         assertEquals(1, entries.size());
-        BibEntry a = entries.get(0);
-
-        assertEquals("article", a.getType());
-        assertEquals(Optional.of("Geoscience and Remote Sensing Letters, IEEE"), a.getField("journal"));
+        assertEquals(StandardEntryType.Article, entry.getType());
+        assertEquals(Optional.of("Geoscience and Remote Sensing Letters, IEEE"), entry.getField(StandardField.JOURNAL));
         assertEquals(
                 Optional.of(
                         "Improving Urban Road Extraction in High-Resolution Images Exploiting Directional Filtering, Perceptual Grouping, and Simple Topological Concepts"),
-                a.getField("title"));
-        assertEquals(Optional.of("4"), a.getField("volume"));
-        assertEquals(Optional.of("3"), a.getField("number"));
-        assertEquals(Optional.of("1545-598X"), a.getField("SN"));
-        assertEquals(Optional.of("387--391"), a.getField("pages"));
-        assertEquals(Optional.of("Gamba, P. and Dell'Acqua, F. and Lisini, G."), a.getField("author"));
-        assertEquals(Optional.of("2006"), a.getField("year"));
+                entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("4"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("3"), entry.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("1545-598X"), entry.getField(new UnknownField("SN")));
+        assertEquals(Optional.of("387--391"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Gamba, P. and Dell'Acqua, F. and Lisini, G."), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("2006"), entry.getField(StandardField.YEAR));
         assertEquals(Optional.of("Perceptual grouping, street extraction, urban remote sensing"),
-                a.getField("keywords"));
-        assertEquals(Optional.of("Lorem ipsum abstract"), a.getField("abstract"));
+                entry.getField(StandardField.KEYWORDS));
+        assertEquals(Optional.of("Lorem ipsum abstract"), entry.getField(StandardField.ABSTRACT));
     }
 
     @Test
     public void testImportEntriesMedline() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTestMedline.isi").toURI());
-
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTestMedline.isi").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
-        assertEquals(2, entries.size());
-        BibEntry a = entries.get(0);
-        BibEntry b = entries.get(1);
+        BibEntry first = entries.get(0);
+        BibEntry second = entries.get(1);
 
+        assertEquals(2, entries.size());
         assertEquals(
                 Optional.of("Effects of modafinil on cognitive performance and alertness during sleep deprivation."),
-                a.getField("title"));
-
-        assertEquals(Optional.of("Wesensten, Nancy J."), a.getField("author"));
-        assertEquals(Optional.of("Curr Pharm Des"), a.getField("journal"));
-        assertEquals(Optional.of("2006"), a.getField("year"));
-        assertEquals(Optional.empty(), a.getField("month"));
-        assertEquals(Optional.of("12"), a.getField("volume"));
-        assertEquals(Optional.of("20"), a.getField("number"));
-        assertEquals(Optional.of("2457--71"), a.getField("pages"));
-        assertEquals("article", a.getType());
-
+                first.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Wesensten, Nancy J."), first.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Curr Pharm Des"), first.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("2006"), first.getField(StandardField.YEAR));
+        assertEquals(Optional.empty(), first.getField(StandardField.MONTH));
+        assertEquals(Optional.of("12"), first.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("20"), first.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("2457--71"), first.getField(StandardField.PAGES));
+        assertEquals(StandardEntryType.Article, first.getType());
         assertEquals(
                 Optional.of(
                         "Estrogen therapy selectively enhances prefrontal cognitive processes: a randomized, double-blind, placebo-controlled study with functional magnetic resonance imaging in perimenopausal and recently postmenopausal women."),
-                b.getField("title"));
+                second.getField(StandardField.TITLE));
         assertEquals(
                 Optional.of(
                         "Joffe, Hadine and Hall, Janet E. and Gruber, Staci and Sarmiento, Ingrid A. and Cohen, Lee S. and Yurgelun-Todd, Deborah and Martin, Kathryn A."),
-                b.getField("author"));
-        assertEquals(Optional.of("2006"), b.getField("year"));
-        assertEquals(Optional.of("#may#"), b.getField("month"));
-        assertEquals(Optional.of("13"), b.getField("volume"));
-        assertEquals(Optional.of("3"), b.getField("number"));
-        assertEquals(Optional.of("411--22"), b.getField("pages"));
-        assertEquals("article", b.getType());
+                second.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("2006"), second.getField(StandardField.YEAR));
+        assertEquals(Optional.of(Month.MAY), second.getMonth());
+        assertEquals(Optional.of("13"), second.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("3"), second.getField(StandardField.NUMBER));
+        assertEquals(Optional.of("411--22"), second.getField(StandardField.PAGES));
+        assertEquals(StandardEntryType.Article, second.getType());
     }
 
     @Test
     public void testImportEntriesEmpty() throws IOException, URISyntaxException {
-        Path file = Paths.get(IsiImporterTest.class.getResource("IsiImporterTestEmpty.isi").toURI());
+        Path file = Path.of(IsiImporterTest.class.getResource("IsiImporterTestEmpty.isi").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
