@@ -5,150 +5,158 @@ import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
 
 import org.jabref.logic.bibtex.BibEntryAssert;
-import org.jabref.logic.util.FileType;
+import org.jabref.logic.util.StandardFileType;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.StandardField;
+import org.jabref.model.entry.field.UnknownField;
+import org.jabref.model.entry.types.StandardEntryType;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 public class OvidImporterTest {
 
+    private static final String FILE_ENDING = ".txt";
     private OvidImporter importer;
 
+    private static Stream<String> fileNames() throws IOException {
+        Predicate<String> fileName = name -> name.startsWith("OvidImporterTest")
+                && !name.contains("Invalid")
+                && name.endsWith(FILE_ENDING);
+        return ImporterTestEngine.getTestFiles(fileName).stream();
+    }
 
-    @Before
+    private static Stream<String> invalidFileNames() throws IOException {
+        Predicate<String> fileName = name -> !name.contains("OvidImporterTest");
+        return ImporterTestEngine.getTestFiles(fileName).stream();
+    }
+
+    @BeforeEach
     public void setUp() {
         importer = new OvidImporter();
     }
 
     @Test
     public void testGetFormatName() {
-        Assert.assertEquals("Ovid", importer.getName());
+        assertEquals("Ovid", importer.getName());
     }
 
     @Test
     public void testGetCLIId() {
-        Assert.assertEquals("ovid", importer.getId());
+        assertEquals("ovid", importer.getId());
     }
 
     @Test
     public void testsGetExtensions() {
-        Assert.assertEquals(FileType.OVID, importer.getFileType());
+        assertEquals(StandardFileType.TXT, importer.getFileType());
     }
 
     @Test
     public void testGetDescription() {
-        Assert.assertEquals("Imports an Ovid file.", importer.getDescription());
+        assertEquals("Imports an Ovid file.", importer.getDescription());
     }
 
-    @Test
-    public void testIsRecognizedFormatAccept() throws IOException, URISyntaxException {
-
-        List<String> list = Arrays.asList("OvidImporterTest1.txt", "OvidImporterTest3.txt", "OvidImporterTest4.txt",
-                "OvidImporterTest5.txt", "OvidImporterTest6.txt", "OvidImporterTest7.txt");
-
-        for (String str : list) {
-            Path file = Paths.get(OvidImporter.class.getResource(str).toURI());
-            Assert.assertTrue(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
-        }
+    @ParameterizedTest
+    @MethodSource("fileNames")
+    public void testIsRecognizedFormatAccept(String fileName) throws IOException, URISyntaxException {
+        ImporterTestEngine.testIsRecognizedFormat(importer, fileName);
     }
 
-    @Test
-    public void testIsRecognizedFormatRejected() throws IOException, URISyntaxException {
-
-        List<String> list = Arrays.asList("Empty.txt", "OvidImporterTest2.txt");
-
-        for (String str : list) {
-            Path file = Paths.get(OvidImporter.class.getResource(str).toURI());
-            Assert.assertFalse(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
-        }
+    @ParameterizedTest
+    @MethodSource("invalidFileNames")
+    public void testIsRecognizedFormatRejected(String fileName) throws IOException, URISyntaxException {
+        ImporterTestEngine.testIsNotRecognizedFormat(importer, fileName);
     }
 
     @Test
     public void testImportEmpty() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("Empty.txt").toURI());
+        Path file = Path.of(OvidImporter.class.getResource("Empty.txt").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
-        Assert.assertEquals(Collections.emptyList(), entries);
+        assertEquals(Collections.emptyList(), entries);
     }
 
     @Test
     public void testImportEntries1() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest1.txt").toURI());
+        Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest1.txt").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
-        Assert.assertEquals(5, entries.size());
+        assertEquals(5, entries.size());
 
         BibEntry entry = entries.get(0);
-        Assert.assertEquals("misc", entry.getType());
-        Assert.assertEquals(Optional.of("Mustermann and Musterfrau"), entry.getField("author"));
-        Assert.assertEquals(Optional.of("Short abstract"), entry.getField("abstract"));
-        Assert.assertEquals(Optional.of("Musterbuch"), entry.getField("title"));
-        Assert.assertEquals(Optional.of("Einleitung"), entry.getField("chaptertitle"));
+        assertEquals(StandardEntryType.Misc, entry.getType());
+        assertEquals(Optional.of("Mustermann and Musterfrau"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Short abstract"), entry.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("Musterbuch"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Einleitung"), entry.getField(new UnknownField("chaptertitle")));
 
         entry = entries.get(1);
-        Assert.assertEquals("inproceedings", entry.getType());
-        Assert.assertEquals(Optional.of("Max"), entry.getField("editor"));
-        Assert.assertEquals(Optional.of("Max the Editor"), entry.getField("title"));
-        Assert.assertEquals(Optional.of("Very Long Title"), entry.getField("journal"));
-        Assert.assertEquals(Optional.of("28"), entry.getField("volume"));
-        Assert.assertEquals(Optional.of("2"), entry.getField("issue"));
-        Assert.assertEquals(Optional.of("2015"), entry.getField("year"));
-        Assert.assertEquals(Optional.of("103--106"), entry.getField("pages"));
+        assertEquals(StandardEntryType.InProceedings, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.EDITOR));
+        assertEquals(Optional.of("Max the Editor"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("2"), entry.getField(StandardField.ISSUE));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
 
         entry = entries.get(2);
-        Assert.assertEquals("incollection", entry.getType());
-        Assert.assertEquals(Optional.of("Max"), entry.getField("author"));
-        Assert.assertEquals(Optional.of("Test"), entry.getField("title"));
-        Assert.assertEquals(Optional.of("Very Long Title"), entry.getField("journal"));
-        Assert.assertEquals(Optional.of("28"), entry.getField("volume"));
-        Assert.assertEquals(Optional.of("2"), entry.getField("issue"));
-        Assert.assertEquals(Optional.of("April"), entry.getField("month"));
-        Assert.assertEquals(Optional.of("2015"), entry.getField("year"));
-        Assert.assertEquals(Optional.of("103--106"), entry.getField("pages"));
+        assertEquals(StandardEntryType.InCollection, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("Test"), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.JOURNAL));
+        assertEquals(Optional.of("28"), entry.getField(StandardField.VOLUME));
+        assertEquals(Optional.of("2"), entry.getField(StandardField.ISSUE));
+        assertEquals(Optional.of("April"), entry.getField(StandardField.MONTH));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
 
         entry = entries.get(3);
-        Assert.assertEquals("book", entry.getType());
-        Assert.assertEquals(Optional.of("Max"), entry.getField("author"));
-        Assert.assertEquals(Optional.of("2015"), entry.getField("year"));
-        Assert.assertEquals(Optional.of("Editor"), entry.getField("editor"));
-        Assert.assertEquals(Optional.of("Very Long Title"), entry.getField("booktitle"));
-        Assert.assertEquals(Optional.of("103--106"), entry.getField("pages"));
-        Assert.assertEquals(Optional.of("Address"), entry.getField("address"));
-        Assert.assertEquals(Optional.of("Publisher"), entry.getField("publisher"));
+        assertEquals(StandardEntryType.Book, entry.getType());
+        assertEquals(Optional.of("Max"), entry.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("2015"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("Editor"), entry.getField(StandardField.EDITOR));
+        assertEquals(Optional.of("Very Long Title"), entry.getField(StandardField.BOOKTITLE));
+        assertEquals(Optional.of("103--106"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Address"), entry.getField(StandardField.ADDRESS));
+        assertEquals(Optional.of("Publisher"), entry.getField(StandardField.PUBLISHER));
 
         entry = entries.get(4);
-        Assert.assertEquals("article", entry.getType());
-        Assert.assertEquals(Optional.of("2014"), entry.getField("year"));
-        Assert.assertEquals(Optional.of("58"), entry.getField("pages"));
-        Assert.assertEquals(Optional.of("Test"), entry.getField("address"));
-        Assert.assertEquals(Optional.empty(), entry.getField("title"));
-        Assert.assertEquals(Optional.of("TestPublisher"), entry.getField("publisher"));
+        assertEquals(StandardEntryType.Article, entry.getType());
+        assertEquals(Optional.of("2014"), entry.getField(StandardField.YEAR));
+        assertEquals(Optional.of("58"), entry.getField(StandardField.PAGES));
+        assertEquals(Optional.of("Test"), entry.getField(StandardField.ADDRESS));
+        assertEquals(Optional.empty(), entry.getField(StandardField.TITLE));
+        assertEquals(Optional.of("TestPublisher"), entry.getField(StandardField.PUBLISHER));
     }
 
     @Test
     public void testImportEntries2() throws IOException, URISyntaxException {
-        Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest2.txt").toURI());
+        Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest2Invalid.txt").toURI());
         List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
-        Assert.assertEquals(Collections.emptyList(), entries);
+        assertEquals(Collections.emptyList(), entries);
     }
 
     @Test
     public void testImportSingleEntries() throws IOException, URISyntaxException {
 
         for (int n = 3; n <= 7; n++) {
-            Path file = Paths.get(OvidImporter.class.getResource("OvidImporterTest" + n + ".txt").toURI());
+            Path file = Path.of(OvidImporter.class.getResource("OvidImporterTest" + n + ".txt").toURI());
             try (InputStream nis = OvidImporter.class.getResourceAsStream("OvidImporterTestBib" + n + ".bib")) {
                 List<BibEntry> entries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase()
-                        .getEntries();
-                Assert.assertNotNull(entries);
-                Assert.assertEquals(1, entries.size());
+                                                 .getEntries();
+                assertNotNull(entries);
+                assertEquals(1, entries.size());
                 BibEntryAssert.assertEquals(nis, entries.get(0));
             }
         }
