@@ -4,33 +4,38 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Predicate;
+import java.util.stream.Stream;
 
 import org.jabref.logic.importer.ParserResult;
-import org.jabref.logic.util.FileType;
-import org.jabref.logic.xmp.XMPPreferences;
+import org.jabref.logic.util.StandardFileType;
+import org.jabref.logic.xmp.XmpPreferences;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.field.StandardField;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
 public class PdfXmpImporterTest {
 
     private PdfXmpImporter importer;
 
+    private static Stream<String> invalidFileNames() throws IOException {
+        Predicate<String> fileName = name -> !name.contains("annotated.pdf");
+        return ImporterTestEngine.getTestFiles(fileName).stream();
+    }
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        importer = new PdfXmpImporter(mock(XMPPreferences.class));
+        importer = new PdfXmpImporter(mock(XmpPreferences.class));
     }
 
     @Test
@@ -40,7 +45,7 @@ public class PdfXmpImporterTest {
 
     @Test
     public void testsGetExtensions() {
-        assertEquals(FileType.XMP, importer.getFileType());
+        assertEquals(StandardFileType.PDF, importer.getFileType());
     }
 
     @Test
@@ -50,40 +55,35 @@ public class PdfXmpImporterTest {
 
     @Test
     public void importEncryptedFileReturnsError() throws URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("/pdfs/encrypted.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("/pdfs/encrypted.pdf").toURI());
         ParserResult result = importer.importDatabase(file, StandardCharsets.UTF_8);
-        Assert.assertTrue(result.hasWarnings());
+        assertTrue(result.hasWarnings());
     }
 
     @Test
     public void testImportEntries() throws URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
         List<BibEntry> bibEntries = importer.importDatabase(file, StandardCharsets.UTF_8).getDatabase().getEntries();
 
         assertEquals(1, bibEntries.size());
 
         BibEntry be0 = bibEntries.get(0);
-        assertEquals(Optional.of("how to annotate a pdf"), be0.getField("abstract"));
-        assertEquals(Optional.of("Chris"), be0.getField("author"));
-        assertEquals(Optional.of("pdf, annotation"), be0.getField("keywords"));
-        assertEquals(Optional.of("The best Pdf ever"), be0.getField("title"));
+        assertEquals(Optional.of("how to annotate a pdf"), be0.getField(StandardField.ABSTRACT));
+        assertEquals(Optional.of("Chris"), be0.getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("pdf, annotation"), be0.getField(StandardField.KEYWORDS));
+        assertEquals(Optional.of("The best Pdf ever"), be0.getField(StandardField.TITLE));
     }
 
     @Test
     public void testIsRecognizedFormat() throws IOException, URISyntaxException {
-        Path file = Paths.get(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
+        Path file = Path.of(PdfXmpImporterTest.class.getResource("annotated.pdf").toURI());
         assertTrue(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
     }
 
-    @Test
-    public void testIsRecognizedFormatReject() throws IOException, URISyntaxException {
-        List<String> list = Arrays.asList("IEEEImport1.txt", "IsiImporterTest1.isi", "IsiImporterTestInspec.isi",
-                "IsiImporterTestWOS.isi", "IsiImporterTestMedline.isi", "RisImporterTest1.ris", "empty.pdf");
-
-        for (String str : list) {
-            Path file = Paths.get(PdfXmpImporterTest.class.getResource(str).toURI());
-            assertFalse(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
-        }
+    @ParameterizedTest
+    @MethodSource("invalidFileNames")
+    public void testIsRecognizedFormatReject(String fileName) throws IOException, URISyntaxException {
+        ImporterTestEngine.testIsNotRecognizedFormat(importer, fileName);
     }
 
     @Test
