@@ -4,48 +4,47 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
-import org.jabref.logic.util.FileType;
+import org.jabref.logic.util.StandardFileType;
 
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 public class RISImporterTest {
 
     private RisImporter importer;
 
-
-    @Before
+    @BeforeEach
     public void setUp() {
         importer = new RisImporter();
     }
 
     @Test
     public void testGetFormatName() {
-        Assert.assertEquals("RIS", importer.getName());
+        assertEquals("RIS", importer.getName());
     }
 
     @Test
     public void testGetCLIId() {
-        Assert.assertEquals("ris", importer.getId());
+        assertEquals("ris", importer.getId());
     }
 
     @Test
     public void testsGetExtensions() {
-        Assert.assertEquals(FileType.RIS, importer.getFileType());
+        assertEquals(StandardFileType.RIS, importer.getFileType());
     }
 
     @Test
     public void testGetDescription() {
-        Assert.assertEquals("Imports a Biblioscape Tag File.", importer.getDescription());
+        assertEquals("Imports a Biblioscape Tag File.", importer.getDescription());
     }
 
     @Test
     public void testIfNotRecognizedFormat() throws IOException, URISyntaxException {
-        Path file = Paths.get(RISImporterTest.class.getResource("RisImporterCorrupted.ris").toURI());
-        Assert.assertFalse(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
+        Path file = Path.of(RISImporterTest.class.getResource("RisImporterCorrupted.ris").toURI());
+        assertFalse(importer.isRecognizedFormat(file, StandardCharsets.UTF_8));
     }
-
 }
