@@ -7,179 +7,194 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
+import java.util.ResourceBundle;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import com.google.common.collect.Sets;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.testfx.framework.junit5.ApplicationExtension;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class LocalizationConsistencyTest {
+// Need to run on JavaFX thread since we are parsing FXML files
+@ExtendWith(ApplicationExtension.class)
+class LocalizationConsistencyTest {
 
     @Test
-    public void allFilesMustBeInLanguages() throws IOException {
-        for (String bundle : Arrays.asList("JabRef", "Menu")) {
-            // e.g., "<bundle>_en.properties", where <bundle> is [JabRef, Menu]
-            Pattern propertiesFile = Pattern.compile(String.format("%s_.{2,}.properties", bundle));
-            Set<String> localizationFiles = new HashSet<>();
-            try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(Paths.get("src/main/resources/l10n"))) {
-                for (Path fullPath : directoryStream) {
-                    String fileName = fullPath.getFileName().toString();
-                    if (propertiesFile.matcher(fileName).matches()) {
-                        localizationFiles.add(fileName.substring(bundle.length() + 1, fileName.length() - ".properties".length()));
-                    }
+    void allFilesMustBeInLanguages() throws IOException {
+        String bundle = "JabRef";
+        // e.g., "<bundle>_en.properties", where <bundle> is [JabRef, Menu]
+        Pattern propertiesFile = Pattern.compile(String.format("%s_.{2,}.properties", bundle));
+        Set<String> localizationFiles = new HashSet<>();
+        try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(Path.of("src/main/resources/l10n"))) {
+            for (Path fullPath : directoryStream) {
+                String fileName = fullPath.getFileName().toString();
+                if (propertiesFile.matcher(fileName).matches()) {
+                    localizationFiles.add(fileName.substring(bundle.length() + 1, fileName.length() - ".properties".length()));
                 }
             }
-            Assert.assertEquals("There are some localization files that are not present in org.jabref.logic.l10n.Languages or vice versa!",
-                    Collections.<String>emptySet(), Sets.symmetricDifference(new HashSet<>(Languages.LANGUAGES.values()), localizationFiles));
+        }
+
+        Set<String> knownLanguages = Stream.of(Language.values())
+                                           .map(Language::getId)
+                                           .collect(Collectors.toSet());
+        assertEquals(knownLanguages, localizationFiles, "There are some localization files that are not present in org.jabref.logic.l10n.Language or vice versa!");
+    }
+
+    @Test
+    void ensureNoDuplicates() {
+        String bundle = "JabRef";
+        for (Language lang : Language.values()) {
+            String propertyFilePath = String.format("/l10n/%s_%s.properties", bundle, lang.getId());
+
+            // read in
+            DuplicationDetectionProperties properties = new DuplicationDetectionProperties();
+            try (InputStream is = LocalizationConsistencyTest.class.getResourceAsStream(propertyFilePath);
+                 InputStreamReader reader = new InputStreamReader(is, StandardCharsets.UTF_8)) {
+                properties.load(reader);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+
+            List<String> duplicates = properties.getDuplicates();
+
+            assertEquals(Collections.emptyList(), duplicates, "Duplicate keys inside bundle " + bundle + "_" + lang.getId());
         }
     }
 
     @Test
-    public void ensureNoDuplicates() {
-        for (String bundle : Arrays.asList("JabRef", "Menu")) {
-            for (String lang : Languages.LANGUAGES.values()) {
-                String propertyFilePath = String.format("/l10n/%s_%s.properties", bundle, lang);
-
-                // read in
-                DuplicationDetectionProperties properties = new DuplicationDetectionProperties();
-                try (InputStream is = LocalizationConsistencyTest.class.getResourceAsStream(propertyFilePath);
-                     InputStreamReader reader = new InputStreamReader(is, StandardCharsets.UTF_8)) {
-                    properties.load(reader);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
-
-                List<String> duplicates = properties.getDuplicates();
-
-                assertEquals("Duplicate keys inside bundle " + bundle + "_" + lang, Collections.emptyList(), duplicates);
-            }
-        }
-    }
-
-    @Test
-    public void keyValueShouldBeEqualForEnglishPropertiesMenu() {
-        Properties englishKeys = LocalizationParser
-                .getProperties(String.format("/l10n/%s_%s.properties", "Menu", "en"));
+    void keyValueShouldBeEqualForEnglishPropertiesMessages() {
+        Properties englishKeys = LocalizationParser.getProperties(String.format("/l10n/%s_%s.properties", "JabRef", "en"));
         for (Map.Entry<Object, Object> entry : englishKeys.entrySet()) {
-            String expectedKeyEqualsKey = String.format("%s=%s", entry.getKey(), entry.getKey());
-            String actualKeyEqualsValue = String.format("%s=%s", entry.getKey(),
-                    entry.getValue().toString().replace("&", ""));
+            String expectedKeyEqualsKey = String.format("%s=%s", entry.getKey(), entry.getKey().toString().replace("\n", "\\n"));
+            String actualKeyEqualsValue = String.format("%s=%s", entry.getKey(), entry.getValue().toString().replace("\n", "\\n"));
             assertEquals(expectedKeyEqualsKey, actualKeyEqualsValue);
         }
     }
 
     @Test
-    public void keyValueShouldBeEqualForEnglishPropertiesMessages() {
-        Properties englishKeys = LocalizationParser
-                .getProperties(String.format("/l10n/%s_%s.properties", "JabRef", "en"));
-        for (Map.Entry<Object, Object> entry : englishKeys.entrySet()) {
-            String expectedKeyEqualsKey = String.format("%s=%s", entry.getKey(), entry.getKey());
-            String actualKeyEqualsValue = String.format("%s=%s", entry.getKey(), entry.getValue());
-            assertEquals(expectedKeyEqualsKey, actualKeyEqualsValue);
-        }
-    }
-
-    @Test
-    public void languageKeysShouldNotBeQuotedInFiles() throws IOException {
+    void languageKeysShouldNotContainUnderscoresForSpaces() throws IOException {
         final List<LocalizationEntry> quotedEntries = LocalizationParser
                 .findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG)
                 .stream()
-                .filter(key -> key.getKey().contains("_") && key.getKey().equals(new LocalizationKey(key.getKey()).getPropertiesKey()))
+                .filter(key -> key.getKey().contains("\\_"))
                 .collect(Collectors.toList());
-        Assert.assertEquals(
-                "Language keys must not be used quoted in code! Use \"This is a message\" instead of \"This_is_a_message\".\n" +
+        assertEquals(Collections.emptyList(), quotedEntries,
+                "Language keys must not use underscores for spaces! Use \"This is a message\" instead of \"This_is_a_message\".\n" +
                         "Please correct the following entries:\n" +
                         quotedEntries
                                 .stream()
                                 .map(key -> String.format("\n%s (%s)\n", key.getKey(), key.getPath()))
-                                .collect(Collectors.toList())
-                ,
-                Collections.EMPTY_LIST, quotedEntries);
+                                .collect(Collectors.toList()));
     }
 
     @Test
-    public void findMissingLocalizationKeys() throws IOException {
-        List<LocalizationEntry> missingKeys = LocalizationParser.find(LocalizationBundleForTest.LANG).stream().sorted()
-                .distinct().collect(Collectors.toList());
-
-        assertEquals("DETECTED LANGUAGE KEYS WHICH ARE NOT IN THE ENGLISH LANGUAGE FILE\n" +
-                        "PASTE THESE INTO THE ENGLISH LANGUAGE FILE\n" +
-                        missingKeys.parallelStream()
-                                .map(key -> String.format("\n%s=%s\n", key.getKey(), key.getKey().replaceAll("\\\\ ", " ")))
-                                .collect(Collectors.toList()),
-                Collections.<LocalizationEntry>emptyList(), missingKeys);
+    void languageKeysShouldNotContainHtmlBrAndHtmlP() throws IOException {
+        final List<LocalizationEntry> entriesWithHtml = LocalizationParser
+                .findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG)
+                .stream()
+                .filter(key -> key.getKey().contains("<br>") || key.getKey().contains("<p>"))
+                .collect(Collectors.toList());
+        assertEquals(Collections.emptyList(), entriesWithHtml,
+                "Language keys must not contain HTML <br> or <p>. Use \\n for a line break.\n" +
+                        "Please correct the following entries:\n" +
+                        entriesWithHtml
+                                .stream()
+                                .map(key -> String.format("\n%s (%s)\n", key.getKey(), key.getPath()))
+                                .collect(Collectors.toList()));
     }
 
     @Test
-    public void findMissingMenuLocalizationKeys() throws IOException {
-        Set<LocalizationEntry> missingKeys = LocalizationParser.find(LocalizationBundleForTest.MENU);
-
-        assertEquals("DETECTED LANGUAGE KEYS WHICH ARE NOT IN THE ENGLISH MENU FILE\n" +
-                        "PASTE THESE INTO THE ENGLISH MENU FILE\n" +
-                        missingKeys.parallelStream()
-                                .map(key -> String.format("%s=%s", key.getKey(), key.getKey()))
-                                .collect(Collectors.toList()),
-                Collections.<LocalizationEntry>emptySet(), missingKeys);
+    void findMissingLocalizationKeys() throws IOException {
+        List<LocalizationEntry> missingKeys = LocalizationParser.findMissingKeys(LocalizationBundleForTest.LANG)
+                                                                .stream()
+                                                                .collect(Collectors.toList());
+        assertEquals(Collections.emptyList(), missingKeys,
+                missingKeys.stream()
+                           .map(key -> LocalizationKey.fromKey(key.getKey()))
+                           .map(key -> String.format("%s=%s",
+                                   key.getEscapedPropertiesKey(),
+                                   key.getValueForEnglishPropertiesFile()))
+                           .collect(Collectors.joining("\n",
+                                   "\n\nDETECTED LANGUAGE KEYS WHICH ARE NOT IN THE ENGLISH LANGUAGE FILE\n" +
+                                           "PASTE THESE INTO THE ENGLISH LANGUAGE FILE\n\n",
+                                   "\n\n")));
     }
 
     @Test
-    public void findObsoleteLocalizationKeys() throws IOException {
+    void findObsoleteLocalizationKeys() throws IOException {
         Set<String> obsoleteKeys = LocalizationParser.findObsolete(LocalizationBundleForTest.LANG);
-
-        assertEquals("Obsolete keys found in language properties file: " + obsoleteKeys + "\n" +
-                        "1. CHECK IF THE KEY IS REALLY NOT USED ANYMORE\n" +
-                        "2. REMOVE THESE FROM THE ENGLISH LANGUAGE FILE\n",
-                Collections.<String>emptySet(), obsoleteKeys);
+        assertEquals(Collections.emptySet(), obsoleteKeys,
+                obsoleteKeys.stream().collect(Collectors.joining("\n",
+                        "Obsolete keys found in language properties file: \n\n",
+                        "\n\n1. CHECK IF THE KEY IS REALLY NOT USED ANYMORE\n" +
+                                "2. REMOVE THESE FROM THE ENGLISH LANGUAGE FILE\n"))
+        );
     }
 
     @Test
-    public void findObsoleteMenuLocalizationKeys() throws IOException {
-        Set<String> obsoleteKeys = LocalizationParser.findObsolete(LocalizationBundleForTest.MENU);
-
-        assertEquals("Obsolete keys found in the menu properties file: " + obsoleteKeys + "\n" +
-                        "1. CHECK IF THE KEY IS REALLY NOT USED ANYMORE\n" +
-                        "2. REMOVE THESE FROM THE ENGLISH MENU FILE\n",
-                Collections.<String>emptySet(), obsoleteKeys);
-    }
-
-    @Test
-    public void localizationParameterMustIncludeAString() throws IOException {
+    void localizationParameterMustIncludeAString() throws IOException {
         // Must start or end with "
         // Localization.lang("test"), Localization.lang("test" + var), Localization.lang(var + "test")
         // TODO: Localization.lang(var1 + "test" + var2) not covered
         // Localization.lang("Problem downloading from %1", address)
         Set<LocalizationEntry> keys = LocalizationParser.findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.LANG);
         for (LocalizationEntry e : keys) {
-            assertTrue("Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey(),
-                    e.getKey().startsWith("\"") || e.getKey().endsWith("\""));
+            assertTrue(e.getKey().startsWith("\"") || e.getKey().endsWith("\""), "Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey());
         }
 
         keys = LocalizationParser.findLocalizationParametersStringsInJavaFiles(LocalizationBundleForTest.MENU);
         for (LocalizationEntry e : keys) {
-            assertTrue("Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey(),
-                    e.getKey().startsWith("\"") || e.getKey().endsWith("\""));
+            assertTrue(e.getKey().startsWith("\"") || e.getKey().endsWith("\""), "Illegal localization parameter found. Must include a String with potential concatenation or replacement parameters. Illegal parameter: Localization.lang(" + e.getKey());
+        }
+    }
+
+    private static Language[] installedLanguages() {
+        return Language.values();
+    }
+
+    @ParameterizedTest
+    @MethodSource("installedLanguages")
+    void resourceBundleExists(Language language) {
+        Path messagesPropertyFile = Path.of("src/main/resources").resolve(Localization.RESOURCE_PREFIX + "_" + language.getId() + ".properties");
+        assertTrue(Files.exists(messagesPropertyFile));
+    }
+
+    @ParameterizedTest
+    @MethodSource("installedLanguages")
+    void languageCanBeLoaded(Language language) {
+        Locale oldLocale = Locale.getDefault();
+        try {
+            Locale locale = Language.convertToSupportedLocale(language).get();
+            Locale.setDefault(locale);
+            ResourceBundle messages = ResourceBundle.getBundle(Localization.RESOURCE_PREFIX, locale);
+            assertNotNull(messages);
+        } finally {
+            Locale.setDefault(oldLocale);
         }
     }
 
     private static class DuplicationDetectionProperties extends Properties {
+
         private static final long serialVersionUID = 1L;
 
         private final List<String> duplicates = new ArrayList<>();
 
-        public DuplicationDetectionProperties() {
+        DuplicationDetectionProperties() {
             super();
         }
 
@@ -196,7 +211,7 @@ public class LocalizationConsistencyTest {
             return super.put(key, value);
         }
 
-        public List<String> getDuplicates() {
+        List<String> getDuplicates() {
             return duplicates;
         }
     }
