@@ -1,45 +1,45 @@
 package org.jabref.logic.pdf;
 
-
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
-import org.jabref.model.entry.FieldName;
+import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.pdf.FileAnnotation;
+import org.jabref.preferences.FilePreferences;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class EntryAnnotationImporterTest {
 
-    private BibDatabaseContext databaseContext = mock(BibDatabaseContext.class);
-    private BibEntry entry = new BibEntry("EntryKey");
+    private final BibDatabaseContext databaseContext = mock(BibDatabaseContext.class);
+    private BibEntry entry;
 
-    @Before
+    @BeforeEach
     public void setUp() {
-        when(databaseContext.getFileDirectoriesAsPaths(any())).thenReturn(Collections.singletonList(Paths.get("src/test/resources/pdfs/")));
+        entry = new BibEntry();
+        when(databaseContext.getFileDirectories(any())).thenReturn(Collections.singletonList(Path.of("src/test/resources/pdfs/")));
     }
 
     @Test
     public void readEntryExampleThesis() {
-        //given
-        entry.setField(FieldName.FILE, ":thesis-example.pdf:PDF");
+        // given
+        entry.setField(StandardField.FILE, ":thesis-example.pdf:PDF");
         EntryAnnotationImporter entryAnnotationImporter = new EntryAnnotationImporter(entry);
 
-        //when
-        Map<Path, List<FileAnnotation>> annotations = entryAnnotationImporter.importAnnotationsFromFiles(databaseContext);
+        // when
+        Map<Path, List<FileAnnotation>> annotations = entryAnnotationImporter.importAnnotationsFromFiles(databaseContext, mock(FilePreferences.class));
 
-        //then
+        // then
         int fileCounter = 0;
         int annotationCounter = 0;
         for (List<FileAnnotation> annotationsOfFile : annotations.values()) {
